# example-rust-component

./: .gitignore  Cargo.toml  Makefile  README.md  edgee-component.toml
.github/workflows/: check.yml
consent-management/: cmp_component.wasm  edgee-component.toml
consent-management/src/: lib.rs
consent-mapping/: edgee-component.toml
consent-mapping/src/: lib.rs
data-collection/: Cargo.toml  edgee-component.toml
data-collection/src/: lib.rs
edge-function/: Cargo.toml  edgee-component.toml
edge-function/src/: helpers.rs  lib.rs
edge-function/src/helpers/: body.rs
src/: lib.rs
