[package]
name = "example-rust-edge-function-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
http = "1.3.1"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
waki = "0.5.1"
wit-bindgen = "0.43.0"
bytes = "1.10.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
